--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ENVIROMENT=local
+ENVIROMENT=cluster
 CLIENT_DATABASE_ONLINE=mongodb+srv://<DATABASE_USER>:<ACCESS>@cluster0.8kxb6.mongodb.net/<DATABASE_ONLINE>?retryWrites=true&w=majority
 DATABASE_ONLINE=delta
 ONLINE_ACCESS=N13fyjsqJvJ99bsu
@@ -6,12 +6,12 @@ COLLECTION_ONLINE=image_normalize
 AZURE_STORAGE_CONNECTION_STRING=asda
 DATABASE_USER=user_app
 PATH_BASE_ONLINE=C:/Users/olive/Pictures/fonte/flickr30k_images/flickr30k_images/
-PATH_BASE_SINGLE_ONLINE=image.png
+PATH_BASE_SINGLE_ONLINE=https://img.olhardigital.com.br/wp-content/uploads/2021/04/xdisaster-girl.jpg.pagespeed.ic_.tYhof7q3Co-1000x450.jpg
 CLIENT_DATABASE_LOCAL=mongodb://localhost:27017/
 DATABASE_LOCAL=delta
-COLLECTION_LOCAL=image_normalize
-PATH_BASE_LOCAL=C:/Users/olive/Pictures/fonte/flickr30k_images/flickr30k_images/
-PATH_BASE_SINGLE_LOCAL=image.png
+COLLECTION_LOCAL=image_normalize_binary
+PATH_BASE_LOCAL=C:/Users/olive/Pictures/images/
+PATH_BASE_SINGLE_LOCAL=wall.jpg
 BASEWIDTH=700
 BASEHEIGHT=300
 MIN_HEIGHT=5
