--- a/.env
+++ b/.env
@@ -6,14 +6,15 @@ COLLECTION_ONLINE=image_normalize
 AZURE_STORAGE_CONNECTION_STRING=asda
 DATABASE_USER=user_app
 PATH_BASE_ONLINE=C:/Users/olive/Pictures/fonte/flickr30k_images/flickr30k_images/
-PATH_BASE_SINGLE_ONLINE=https://img.olhardigital.com.br/wp-content/uploads/2021/04/xdisaster-girl.jpg.pagespeed.ic_.tYhof7q3Co-1000x450.jpg
+PATH_BASE_SINGLE_ONLINE=wall.jpg
 CLIENT_DATABASE_LOCAL=mongodb://localhost:27017/
 DATABASE_LOCAL=delta
-COLLECTION_LOCAL=image_normalize_binary
-PATH_BASE_LOCAL=C:/Users/olive/Pictures/images/
+COLLECTION_LOCAL=image_normalize_mult
+PATH_BASE_LOCAL=C:/Users/olive/Pictures/fonte/flickr30k_images/flickr30k_images/
 PATH_BASE_SINGLE_LOCAL=wall.jpg
-BASEWIDTH=700
-BASEHEIGHT=300
+BASEWIDTH=300
+BASEHEIGHT=100
 MIN_HEIGHT=5
 MIN_WIDTH=5
 NORMALIZE=True
+CONTADOR=100
